fix: menu mobile position

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.4.3"
+  },
+  "scripts": {
+    "dev": "npx tailwindcss -i ./assets/css/globals.css -o ./assets/css/output.css --watch"
   }
 }
