--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "tailwindcss": "^3.4.3"
   },
   "scripts": {
-    "dev": "npx tailwindcss -i ./assets/css/globals.css -o ./assets/css/output.css --watch"
+    "dev": "pnpm dlx tailwindcss -i ./assets/css/globals.css -o ./assets/css/output.css --watch"
   }
 }
